[package]
name = "valyu"
version = "0.1.0"
edition = "2021"
authors = ["Valyu AI <hirsh@valyu.ai>"]
description = "Official Rust SDK for the Valyu AI API"
documentation = "https://docs.rs/valyu"
homepage = "https://valyu.ai"
repository = "https://github.com/valyunetwork/valyu-rust"
license = "MIT OR Apache-2.0"
keywords = ["valyu", "ai", "search", "api", "sdk"]
categories = ["api-bindings", "web-programming"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }
dotenvy = "0.15"
anyhow = "1.0"
